fix bug in creation de client and Product